add @iconify-json/line-md dependency and update index layout with new icon

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@iconify-json/carbon": "^1.2.14",
+    "@iconify-json/line-md": "^1.2.11",
     "@tailwindcss/vite": "^4.1.17",
     "astro": "^5.16.0",
     "astro-icon": "^1.1.5",
