--- a/netlify.toml
+++ b/netlify.toml
@@ -8,11 +8,11 @@
     # Content Security Policy
     Content-Security-Policy = """
       default-src 'self';
-      script-src 'self' 'unsafe-inline';
+      script-src 'self' 'unsafe-inline' https://analytics.zorygo.ovh;
       style-src 'self' 'unsafe-inline';
       img-src 'self' data: https: blob:;
       font-src 'self' data:;
-      connect-src 'self';
+      connect-src 'self' https://analytics.zorygo.ovh;
       media-src 'self';
       object-src 'none';
       frame-ancestors 'none';
